Fixes dark mode

--- a/CSS_advanced/styles/22-style.css
+++ b/CSS_advanced/styles/22-style.css
@@ -198,9 +198,7 @@ ul.footer {
 }
 
 [data-selection-theme="dark"] {
-    :root {
-        --text-color: var(--color-white);
-        --section-title-color: var(--color-white);
-        background: var(--color-black);
-    }
+    --text-color: var(--color-white);
+    --section-title-color: var(--color-white);
+    background: var(--color-black);
 }
